# ore

./: .Rbuildignore  .covrignore  .gitignore  .travis.yml  DESCRIPTION  LICENCE  NAMESPACE  NEWS  README.Rmd  README.md  cleanup  cleanup.win  configure  configure.ac  configure.win
.github/workflows/: ci.yaml
R/: dict.R  es.R  file.R  match.R  ore.R  workspace.R  zzz.R
data/: glass.rda
inst/tinytest/: drink.txt  test-05-ore.R  test-10-match.R  test-12-files.R  test-13-subst.R  test-15-rex.R  test-20-dict.R  test-25-es.R  test-30-switch.R
man/: es.Rd  glass.Rd  matches.Rd  ore.Rd  ore.dict.Rd  ore.escape.Rd  ore.file.Rd  ore.ismatch.Rd  ore.lastmatch.Rd  ore.search.Rd  ore.split.Rd  ore.subst.Rd  ore_dict.Rd  ore_escape.Rd  ore_file.Rd  ore_ismatch.Rd  ore_lastmatch.Rd  ore_search.Rd  ore_split.Rd  ore_subst.Rd  ore_switch.Rd
src/: Makevars  Makevars.win  compile.c  compile.h  delim.c  escape.c  escape.h  main.c  main.h  match.c  match.h  print.c  print.h  split.c  split.h  subst.c  subst.h  text.c  text.h  wcwidth.h  zzz.c  zzz.h
src/onig/: config.h.in  config.h.win  oniguruma.h  regint.h  regparse.c  st.c  st.h
src/onig/enc/jis/: props.h
src/onig/enc/unicode/: name2ctype.h
tests/: test-all.R  tinytest.R
tests/testthat/: test-05-ore.R  test-10-match.R  test-15-rex.R  test-20-dict.R  test-25-es.R
